styles/common-styles.css
html {
    overflow-x: hidden;
}

body {
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 3%;
    box-sizing: border-box;
    font-family: Open Sans, Roboto, sans-serif;
    letter-spacing: 0.05em;
    background: #fafcff;
}

/* dark theme
body {
    background: #18374b;
}
body * {
    color: #9fd97c !important;
}
pre code.hljs {
    background: #583333 !important;
}
 */

header {
    text-align: center;
}

header>* {
    margin-bottom: 10px;
}

header a.github {
    display: inline-block;
    height: 36px;
    color: #448fa0;
    margin-left: 14px;
    vertical-align: middle;
}

header a.github * {
    fill: currentColor !important;
}

.logo {
    height: 100px;
    display: inline-block;
    vertical-align: middle;
    margin-right: 19px;
    margin-top: 12px;
}

.title {
    display: inline-block;
    font-size: 45px;
    letter-spacing: 0.04em;
    word-wrap: break-word;
    vertical-align: middle;
}

.pixels-badge {
    align-self: center;
    margin-left: -4px;
    color: #ad6161;
}

.title a {
    text-decoration: none;
    color: black;
}

.subtitle {
    color: #000000;
    margin-left: 7px;
    font-weight: bold;
    font-family: monospace;
    font-size: 16px;
    background: #e7e74f;
    vertical-align: middle;
    padding: 2px 2px 4px 5px;
    border-radius: 7px;
}

.description {
    margin-top: 7px;
    margin-left: 37px;
    font-size: 18px;
    color: #484848;
    font-weight: normal;
    font-family: unset;
    letter-spacing: 0.03em;
    word-spacing: 0.1em;
    display: inline-block;
    text-align: left;
    vertical-align: middle;
    max-width: 251px;
    line-height: 1.2em;
}

pre code {
    background: #ffffff;
    padding: 0.5em;
    border: 1px solid #e3e3e3;
    font-size: 17px;
    font-family: monospace;
    display: block;
}

pre code:not(.hljs) { /* before highlight adds a "hljs" style - hide the ugly stuff */
    visibility: hidden;
}

.common-bracket-wrapper {
    height: 600px;
    overflow: auto hidden;
}


.parameter {
    background: #f0d7ff;
    padding: 0 0.25rem;
    line-height: 1.7em;
    width: fit-content;
    border-radius: 0.25rem;
    margin-top: 1em;
}


.inline-code {
    font-family: monospace;
    background: #f6f6f6;
    font-size: 16px;
    padding: 0.3em;
    display: inline-block;
    max-width: 100%;
    word-wrap: break-word;
}


.note {
    background: #fffef0;
    color: #031654;
    padding: 1px 27px;
}




.main-button {
    background: #cddc39b8;
    font-weight: bold;
    padding: 3px 7px;
    user-select: none;
    cursor: pointer;
    font-size: 18px;
    line-height: 29px;
    width: max-content;
    opacity: 0.8;
}

.main-button:hover {
    opacity: 1;
}


.more-link {
    display: flex;
    margin-right: 10%;
    font-size: 16px;
    margin-top: 9px;
    margin-bottom: 3px;
    padding: 1px 4px;
    font-weight: bold;
}










.options-manager-wrapper {
    position: fixed;
    top: 0px;
    right: -1000px;
    width: 265px;
    height: 100vh;
    overflow: visible scroll;
    font-family: sans-serif;
    font-size: 14px;
    z-index: 4;
    padding-bottom: 50px;
    box-sizing: border-box;
    background: white;
    border-left: 1px solid #ccc;
    letter-spacing: 0.03em;
    box-shadow: 6px 2px 20px 0px rgb(0 0 0 / 50%);
}

.sidebar-close-button {
    font-size: 35px;
    box-sizing: border-box;
    cursor: pointer;
    float: right;
    margin: 8px;
    width: 27px;
    height: 18px;
    display: flex;
    align-items: center;
    justify-content: center;
    user-select: none;
}

#option-input-tooltip {
    display: none;
    background: white;
    border: 1px solid rgb(207, 207, 207);
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-height: 90%;
    width: max-content;
    max-width: 80vw;
    z-index: 100;
    padding: 2%;
    overflow: auto;
    font-size: 16px;
    font-family: verdana;
    line-height: 26px;
    box-sizing: border-box;
    box-shadow: 0 0 20px 0px rgb(0 0 0 / 60%);
}

#option-input-tooltip img {
    margin: 10px;
}

#option-input-tooltip > div {
    max-width: 950px;
}

#option-input-tooltip svg {
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
}








.footer {
    margin-top: 50px;
    display: flex;
    align-items: end;
    padding: 30px;
    box-sizing: border-box;
    color: #8f8f8f;
    font-size: 14px;
    border-top: 1px solid #ccc;
}

.footer a {
    font-size: 14px;
    color: #8f8f8f;
}






/* AUXILIARY STUFF */


img:not([src]) {
    display: block;
    height: 10px;
}

p {
    font-size: 16px;
    line-height: 1.6;
    letter-spacing: 0.06em;
}

h1 {
    font-size: 35px;
    font-weight: bold;
    display: block;
    margin-block-start: 60px;
    margin-block-end: 30px;
    margin-inline-start: 0;
    margin-inline-end: 0;
    unicode-bidi: isolate;

}

h2 {
    display: block;
    font-size: 32px;
    margin-block-start: 30px;
    margin-block-end: 15px;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: normal;
}

.heading-4 {
    font-size: 24px;
    margin: 10px 0;
}

.heading-5 {
    font-size: 20px;
    margin: 10px 0;
}

.italic {
    font-style: italic;
}

img {
    display: block;
    max-width: 85vw;
}

li {
    line-height: 2em;
}


@media (max-width: 350px) {
    .title {
        font-size: 13vw;
    }
}

@media (max-width: 500px) {
    .description {
        margin-left: 0;
        text-align: center;
    }
}

